--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ name = "yy-boss"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = "0.1"
+yy-typings = {path = "../yy-typings", version = "0.1"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
