--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,17 +18,21 @@ path = "src/bin.rs"
 
 [dependencies]
 yy-typings = "0.3.3"
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
+strum = "0.18"
+strum_macros = "0.18"
+
 anyhow = "1"
+thiserror = "1"
+
 log = "0.4"
 image = "0.23"
 regex = "1.3"
-strum = "0.18"
-strum_macros = "0.18"
-thiserror = "1"
 maplit = "1"
+clap = "2.33"
 
 [dev-dependencies]
 include_dir = { version = "0.6", features = ["search"]}
