--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,7 @@ name = "yy-boss-cli"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = "0.3.3"
-
+yy-typings = { path = "../yy-typings", version = "0.3.2" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
