--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yy-boss"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Jonathan Spira <jjspira@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -17,7 +17,7 @@ name = "yy-boss-cli"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = { path = "../yy-typings", version = "0.3.2" }
+yy-typings = "0.3.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
