--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yy-boss"
-version = "0.3.2"
+version = "0.3.3"
 authors = ["Jonathan Spira <jjspira@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -17,9 +17,11 @@ name = "yy-boss-cli"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = { path = "../yy-typings", version = "0.3.4"}
+yy-typings = "0.3.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.8"
+semver = {version = "0.10", features = ["serde"] }
 
 strum = "0.18"
 strum_macros = "0.18"
