--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,10 @@ regex = "1.3"
 maplit = "1"
 clap = "2.33"
 
+once_cell = "1.4"
+
 [dev-dependencies]
 include_dir = { version = "0.6", features = ["search"]}
 pretty_assertions = "0.6.1"
+uuid = { version = "0.8", features = ["serde", "v4"] }
 console = "0.11.3"
