--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,66 +1,65 @@
-on: [push, pull_request]
+name: Rust
 
-name: Quickstart
+on: [push]
 
 jobs:
-  check:
-    name: Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+  build:
+    runs-on: windows-latest
 
-      - name: Install stable toolchain
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
+          default: true
           override: true
 
-      - name: Run cargo check
-        uses: actions-rs/cargo@v1
-        continue-on-error: true  # WARNING: only for this example, remove it!
+      - name: Build
+        run: cargo build --all --release
+        if: startsWith(github.ref, 'refs/tags/')
+
+      - name: Compress
+        shell: powershell
+        run: Compress-Archive target/release/mistria-manager.exe -DestinationPath "Mistria Manager.zip"
+        if: startsWith(github.ref, 'refs/tags/')
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          command: check
+          files: Mistria Manager.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  build-mac:
+    runs-on: macos-latest
 
-  test:
-    name: Test Suite
-    runs-on: ubuntu-latest
     steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v1
 
-      - name: Install stable toolchain
+      - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           toolchain: stable
+          target: x86_64-apple-darwin
+          default: true
           override: true
 
-      - name: Run cargo test
-        uses: actions-rs/cargo@v1
-        continue-on-error: true  # WARNING: only for this example, remove it!
-        with:
-          command: test
+      - name: Build
+        run: cargo build --all --release && strip target/release/mistria-manager && mv target/release/mistria-manager target/release/mistria-manager_darwin
+        if: startsWith(github.ref, 'refs/tags/')
 
-  lints:
-    name: Lints
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+      - name: Compress
+        run: zip "Mistria Manager Darwin.zip" target/release/mistria-manager_darwin
+        if: startsWith(github.ref, 'refs/tags/')
 
-      - name: Install stable toolchain
-        uses: actions-rs/toolchain@v1
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          profile: minimal
-          toolchain: stable
-          override: true
-          components: rustfmt
-
-      - name: Run cargo fmt
-        uses: actions-rs/cargo@v1
-        continue-on-error: false
-        with:
-          command: fmt
-          args: --all -- --check
+          files: Mistria Manager Darwin.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
