--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,14 @@ jobs:
 
       - name: Compress
         shell: powershell
-        run: Compress-Archive target/release/mistria-manager.exe -DestinationPath "Mistria Manager.zip"
+        run: Compress-Archive target/release/yy-boss-cli.exe -DestinationPath "YyBoss.zip"
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Mistria Manager.zip
+          files: YyBoss.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   build-mac:
@@ -49,17 +49,17 @@ jobs:
           override: true
 
       - name: Build
-        run: cargo build --all --release && strip target/release/mistria-manager && mv target/release/mistria-manager target/release/mistria-manager_darwin
+        run: cargo build --all --release && strip target/release/yy-boss-cli && mv target/release/yy-boss-cli target/release/yy-boss-cli_darwin
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Compress
-        run: zip "Mistria Manager Darwin.zip" target/release/mistria-manager_darwin
+        run: zip "YyBoss Darwin.zip" target/release/yy-boss-cli_darwin
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: Mistria Manager Darwin.zip
+          files: YyBoss Darwin.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
