--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ maplit = "1"
 clap = "2.33"
 
 once_cell = "1.4"
+simple-logging = "2.0"
 
 [dev-dependencies]
 include_dir = { version = "0.6", features = ["search"]}
