--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Compress
-        run: zip -j "YyBoss Darwin.zip" target/release/yy-boss-cli_darwin
+        run: zip -jD "YyBoss-Darwin.zip" target/release/yy-boss-cli_darwin
         if: startsWith(github.ref, 'refs/tags/')
 
       - name: Release
