--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ clap = "2.33"
 
 once_cell = "1.4"
 simple-logging = "2.0"
+log-panics = "2.0"
 
 [dev-dependencies]
 include_dir = { version = "0.6", features = ["search"]}
