--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ name = "yy-boss-cli"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = "0.4.0"
+yy-typings = { path = "../yy-typings", version = "0.4.0"}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
