--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yy-boss"
-version = "0.5.1"
+version = "0.5.2"
 authors = ["Jonathan Spira <jjspira@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -17,7 +17,7 @@ name = "yy-boss-cli"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = { path = "../yy-typings", version = "0.4.1"}
+yy-typings = "0.4.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
@@ -30,7 +30,7 @@ anyhow = "1.0"
 thiserror = "1.0"
 
 log = "0.4"
-image = "0.23.9"
+image = "0.23"
 regex = "1.3"
 maplit = "1.0"
 clap = "2.33"
