--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yy-boss"
-version = "0.5.10"
+version = "0.5.11"
 authors = ["Jonathan Spira <jjspira@gmail.com>"]
 edition = "2018"
 license = "MIT OR Apache-2.0"
@@ -17,7 +17,7 @@ name = "yy-boss-cli"
 path = "src/bin.rs"
 
 [dependencies]
-yy-typings = { path = "../yy-typings", version = "0.4.8" }
+yy-typings = "0.4.9"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_yaml = "0.8"
