--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yy-boss"
-version = "0.9.0"
+version = "0.9.1"
 authors = ["Jonathan Spira <jjspira@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -9,9 +9,9 @@ repository = "https://github.com/NPC-Studio/yy-boss"
 readme = "README.md"
 
 [dependencies]
-yy-typings = "0.7.0"
+yy-typings = "0.7.1"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }
 serde_yaml = "0.8"
 semver = { version = "1.0", features = ["serde"] }
 
