--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "yy-boss"
-version = "0.9.4"
+version = "0.9.5"
 authors = ["Jonathan Spira <jjspira@gmail.com>"]
 edition = "2021"
 license = "MIT OR Apache-2.0"
@@ -9,8 +9,7 @@ repository = "https://github.com/NPC-Studio/yy-boss"
 readme = "README.md"
 
 [dependencies]
-# yy-typings = "0.7.4"
-yy-typings.path = "../yy-typings"
+yy-typings = "0.7.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }
 serde_yaml = "0.8"
